# Loom-Pro

./: .cursorrules  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMPOSER-START-HERE-PERFECT-SPEC.md  CONTRIBUTING.md  HANDOFF_2026-07-02.md  LICENSE  PROPRIETARY.md  README.md  SECURITY.md  apply_innovations.py  broadcaster_patch.py  engine_patch.diff  final_patch.py  fix_merge.py  gaijinn-dev-loop.sh  implementation_plan.md  loom_resolution_engine_v3.py  patch_api.py  patch_script.py  patch_script_v2.py  pr_description.md  pyproject.toml  task.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
aoc_supervisor/: __init__.py
docs/: INNOVATION-MAPPING.md  PROJECT-REPORT.md  README.md  darkreadme.md  tonight-sprints.json
frontend-formation-complete/: LIMITATIONS.md  RUNBOOK.md  TRANSFORMATION_SUMMARY.md
frontend-formation-complete/frontend-formation/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
frontend-formation-complete/frontend-formation/examples/failing/: actions.registry.yaml  frontend-formation.yaml  index.html  knowledge.registry.yaml  screen.manifest.yaml
frontend-formation-complete/frontend-formation/examples/failing/smoke/: two.yaml
frontend-formation-complete/frontend-formation/examples/passing/: screen.manifest.yaml
frontend-formation-complete/frontend-formation/examples/passing/smoke/: ratification.smoke.yaml
frontend-formation-complete/frontend-formation/examples/source/: actions.registry.yaml  knowledge.registry.yaml
frontend-formation-complete/frontend-formation/generator/: core.py
frontend-formation-complete/frontend-formation/skill/: SKILL.md
frontend-formation-complete/frontend-formation/specification/: action-registry.schema.json  rule-taxonomy.md  screen-manifest.schema.json  smoke-scenario.schema.json
frontend-formation-complete/frontend-formation/tests/: test_generator.py  test_validator.py
frontend-formation-complete/frontend-formation/validator/parser/: html_loader.py  manifest_loader.py
frontend-formation-complete/frontend-formation/validator/rules/: r001_contract_anchoring.py  r003_element_mapping.py  r004_feedback_loop.py  r005_knowledge_binding.py  r006_accessibility.py  r007_smoke_verification.py
loom-frontend-base/: BACKEND_TRACEABILITY.md  README.md  VERIFICATION.md  source-draft.md
sandbox_frontend/: blueprint-ratification.html  blueprint-ratification.md  claims-ledger.html  claims-ledger.md  curvature-analysis.html  curvature-analysis.md  drift-monitor.html  index.html  index.md  packet-export.html  packet-export.md  topological-observatory.html  topological-observatory.md
scripts/: README.md  create_pr_and_cleanup.sh
tests/: conftest.py  test_adaptive_interrogation.py  test_algorithm_wiring.py  test_analysis_receipt_validation.py  test_analysis_receipts.py  test_api_core_paths.py  test_api_key_security.py  test_apply_answer_refactor.py  test_audit.py  test_billing_sprint_token.py  test_blueprint.py  test_blueprint_compiler.py  test_blueprint_cycles.py  test_canonical_authority_registry.py  test_claims_ledger.py  test_cli.py  test_council.py  test_council_composer_watcher.py  test_dataflow.py  test_e2e_golden_path.py  test_giv.py  test_gravity.py  test_gravity_benchmarks.py  test_handoff.py  test_hermes_development_loop.py  test_inferring.py  test_innovation_verification.py  test_intent_blueprint.py  test_intent_forge.py  test_intent_forge_projection.py  test_intent_scan.py  test_interrogation_curriculum.py  test_interrogation_evidence.py  test_interrogation_voice_contract.py  test_knowledge_linter.py  test_loom_continuation_intent.py  test_loom_map_generator.py  test_loom_mirror_forge.py  test_loom_pipeline_intent.py  test_loom_synthesizer.py  (+42 more)
ui/: README.md  blueprint-ratification.html  (+22 more)
(+574 files in other folders)
